--- a/SharedProject1/SpriteContainer.xaml
+++ b/SharedProject1/SpriteContainer.xaml
@@ -18,7 +18,7 @@
             <Separator />
         </ContextMenu>
     </Window.Resources>
-    <Grid Opacity="1" Width="124" MouseRightButtonUp="Grid_MouseRightButtonUp">
+    <Grid Opacity="1" Width="124" MouseRightButtonUp="Grid_MouseRightButtonUp" x:Name="ClippyGrid">
         <Canvas x:Name="ClippyCanvas" HorizontalAlignment="Left" Height="93" VerticalAlignment="Top" Width="124" ClipToBounds="True"/>
     </Grid>
 </Window>
