--- a/SharedProject1/SpriteContainer.xaml
+++ b/SharedProject1/SpriteContainer.xaml
@@ -19,7 +19,7 @@
         </ContextMenu>
     </Window.Resources>
     <Grid Opacity="1" Width="124" MouseRightButtonUp="Grid_MouseRightButtonUp" x:Name="ClippyGrid">
-        <Canvas x:Name="ClippyCanvas" HorizontalAlignment="Left" Height="93" VerticalAlignment="Top" Width="124" ClipToBounds="True"/>
-        XXX<Canvas x:Name="ClippyCanvas1" HorizontalAlignment="Left" Height="93" VerticalAlignment="Top" Width="124" ClipToBounds="True"/>
+        <Canvas x:Name="AssistantCanvasOverlay0" HorizontalAlignment="Left" Height="93" VerticalAlignment="Top" Width="124" ClipToBounds="True" Background="Transparent"/>
+        <Canvas x:Name="AssistantCanvasOverlay1" HorizontalAlignment="Left" Height="93" VerticalAlignment="Top" Width="124" ClipToBounds="True"/>
     </Grid>
 </Window>   
